# monorepo

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  help-viewer.html  index.html
.github/workflows/: build.yml  ci.yml  deploy.yml  pr-preview.yml  publish.yml  registry-deploy.yml  release.yml
compiler/: Cargo.toml
compiler/cli/: Cargo.toml
compiler/cli/src/: http.rs  main.rs  publish.rs
compiler/cli/tests/: extensions.rs
compiler/core/: Cargo.toml
compiler/core/examples/: emoji-table.rs  syntax-css.rs
compiler/core/src/: assets.rs  binary.rs  build.rs  docset.rs  lib.rs  llms.rs  markdown.rs  model.rs  render.rs  schema.rs  source.rs  vfs.rs
compiler/examples/: gen-lorem.py
compiler/examples/en/: categories.yaml  docset.toml  toc.yaml
compiler/examples/en/assets/: quick-reference.txt
compiler/examples/en/pages/: authoring.md  categories.md  distribution.md  getting-started.md  keywords-and-index.md  offline-tauri.md  packaging.md  table-of-contents.md  what-is-khb.md  writing-pages.md
compiler/examples/ext-swatch/: README.md  docset.toml  swatch.py
compiler/examples/ext-swatch/pages/: index.md
compiler/examples/extras-en/: categories.yaml  docset.toml
compiler/examples/extras-en/pages/: faq.md  glossary.md  tips.md
compiler/examples/extras-pl/: categories.yaml  docset.toml  toc.yaml
compiler/examples/extras-pl/pages/: faq.md  glossary.md  tips.md
compiler/examples/lorem/: categories.yaml  docset.toml  toc.yaml
compiler/examples/lorem/pages/: api.md  architecture.md  ch-appendix.md  ch-concepts.md  ch-gallery.md  ch-guides.md  ch-intro.md  ch-reference.md  changelog.md  charts.md  cli.md  configuration.md  credits.md  data-model.md  deployment.md  diagrams.md  faq.md  figures.md  first-project.md  format.md  getting-started.md  glossary.md  indexing.md  installation.md  license.md  mosaics.md  overview.md  philosophy.md  photos.md  rendering.md  schema.md  streaming.md  styling.md  troubleshooting.md
compiler/examples/pl/: categories.yaml  docset.toml
compiler/examples/pl/assets/: quick-reference.txt
compiler/examples/pl/pages/: authoring.md  categories.md  distribution.md  getting-started.md  keywords-and-index.md  offline-tauri.md  packaging.md  table-of-contents.md  what-is-khb.md  writing-pages.md
compiler/examples/sample-sdk-v1/: docset.toml  toc.yaml
compiler/examples/sample-sdk-v1/pages/: getting-started.md  overview.md  reference.md
compiler/examples/sample-sdk-v2/: docset.toml  toc.yaml
compiler/examples/sample-sdk-v2/pages/: getting-started.md  migration.md  overview.md  reference.md
compiler/wasm/: Cargo.toml
compiler/wasm/src/: lib.rs
docs/: README.md  collections.md  compiler.md  desktop.md  format.md  streaming.md  tauri.md
docs/authoring/: README.md  assets.md  blockquotes.md  callouts.md  categories.yaml  code-blocks.md  code-extensions.md  compiling.md  diagrams.md  differences.md  directives.md  docset-collection.md  docset-id.md  docset-language.md  docset-products.md  docset-title.md  docset-toml.md  docset-version.md  docset.toml  emoji.md  extensions.md  footnotes.md  frontmatter-categories.md  frontmatter-id.md  frontmatter-keywords.md  frontmatter-related.md  frontmatter-title.md  frontmatter-toc.md  frontmatter.md  galleries.md  getting-started.md  headings.md  images-and-assets.md  images.md  links.md  lists.md  math.md  page-links.md  tables.md  text-formatting.md  (+4 more)
docs/authoring/assets/: quick-reference.txt
docs/authoring/tools/: example.py
docs/internals/: README.md  building-a-compiler.md  docset.toml  file-formats.md  full-text-search.md  manifest-schemas.md  security-model.md  sqlite-schema.md  streaming.md  toc.yaml
docs/markdown/: README.md  blockquotes.md  callouts.md  code-blocks.md  directives.md  docset.toml  emoji.md  footnotes.md  frontmatter.md  headings.md  images-and-assets.md  links.md  lists.md  math.md  tables.md  text-formatting.md
docs/publishing/: categories.yaml  ci.md  distribution.md  docset.toml  getting-published.md  hosting.md  index.md  khbm-manifests.md  pack-home.md  pack-llms.md  pack-mode.md  pack-profiles.md  pack-stream.md  pack.md  patch.md  toc.yaml  versioning.md
pr-preview/pr-20/: index.html  llms-full.txt  robots.txt  sitemap.xml
pr-preview/pr-23/: index.html  robots.txt  sitemap.xml
pr-preview/pr-24/: docsets.json  index.html  llms-full.txt  robots.txt  sitemap.xml
pr-preview/pr-25/: docsets.json  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
pr-preview/pr-26/: docsets.json  index.html  llms-full.txt  robots.txt  sitemap.xml
pr-preview/pr-27/: index.html  robots.txt  sitemap.xml
pr-preview/pr-28/: docsets.json  index.html  robots.txt  sitemap.xml
pr-preview/pr-29/: docsets.json  index.html  robots.txt  sitemap.xml
pr-preview/pr-30/: docsets.json  index.html  llms-full.txt  robots.txt  sitemap.xml
pr-preview/pr-31/: docsets.json  index.html  robots.txt  sitemap.xml
pr-preview/pr-32/: docsets.json  index.html  llms-full.txt  robots.txt  sitemap.xml  sw.js
pr-preview/pr-33/: config.json  index.html  llms.txt  robots.txt  sitemap.xml
registry/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
registry/config/: permissions.json  site.json
registry/examples/: publish-docset.yml
registry/src/: index.ts  khb-check.ts  manifest.ts  oidc.ts  permissions.ts  publish.ts  serve.ts  types.ts
registry/test/: env.d.ts  helpers.ts  khb-check.test.ts  manifest.test.ts  oidc.test.ts  permissions.test.ts  publish.test.ts  serve.test.ts
viewer-ts/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viewer-ts/public/: docsets.json  manifest.webmanifest  sw.js
viewer-ts/src/: globals.d.ts  main.ts
viewer-ts/src-tauri/: Cargo.toml  tauri.conf.json
viewer-ts/src-tauri/capabilities/: default.json
viewer-ts/src-tauri/src/: http.rs  lib.rs  main.rs
viewer-ts/test/: collection.test.ts  folders.test.ts  khbm.test.ts  langselect.test.ts  manifest.test.ts  toctree.test.ts  uistate.test.ts  versions.test.ts
(+267 files in other folders)
