[package]
name = "khb-cli"
description = "KD Help Book command-line tool (khb): compile / pack / patch / convert"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "khb"
path = "src/main.rs"

[dependencies]
khb-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json = "1"
flate2 = "1"
walkdir = "2"
ureq = "2"

# SIGPIPE reset in main() — see reset_sigpipe().
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
