[package]
name = "kdhelp-core"
description = "kdhelp data engine: .khb docset format, queries, full-text search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml = "0.9"
toml = "0.8"
comrak = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
