[package]
name = "khb-core"
description = "khb data engine: .khb docset format, queries, full-text search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml = "0.9"
toml = "0.8"
comrak = { version = "0.53", features = ["shortcodes"] }
# Same syntect comrak already pulls in — used directly to emit the code-block theme
# CSS (class-based highlighting, so the viewer can re-theme it, e.g. for dark mode).
syntect = "5"
# Render `$…$` LaTeX math to native MathML at build time (no runtime KaTeX/MathJax).
latex2mathml = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
# The same emoji data comrak's `shortcodes` feature resolves — used by the
# `emoji-table` example to generate the docs' shortcode reference, so the
# table can never drift from what the compiler actually converts.
emojis = "0.8"
