[package]
name = "khb-wasm"
description = "wasm-bindgen bindings exposing khb-core to the browser viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
# rlib so the workspace can build/test natively; cdylib is the wasm-pack target.
crate-type = ["cdylib", "rlib"]

[dependencies]
khb-core = { path = "../core" }
